# Algorithm

./: .gitignore  LICENSE.md  README.md
Clion/: CMakeLists.txt  main.cpp  readme.md
Clion/ZeroTrac/1500_1600/: AuthenticationManager_1797.cpp  CombinationIterator_1286.cpp  MaximumUniqueSubarray_1695.cpp  RLEIterator_900.cpp  TimeMap_981.cpp  allCellsDistOrder_1030.cpp  areSentencesSimilar_1813.cpp  balanceBST_1382.cpp  bstFromPreorder_1008.cpp  camelMatch_1023.cpp  canChoose_1764.cpp  canConstruct_1400.cpp  canFormArray_1640.cpp  canReorderDoubled_954.cpp  checkPowersOfThree_1780.cpp  closeStrings_1657.cpp  closestDivisors_1362.cpp  colorBorder_1034.cpp  corpFlightBookings_1109.cpp  countCollisions_2211.cpp  countMaxOrSubsets_2044.cpp  countPalindromicSubsequence_1930.cpp  countTriplets_1442.cpp  countVowelStrings_1641.cpp  diagonalSort_1329.cpp  digArtifacts_2201.cpp  discountPrices_2288.cpp  eliminateMaximum_1921.cpp  findFarmland_1992.cpp  findOriginalArray_2007.cpp  flipgame_822.cpp  getHappyString_1415.cpp  getMaximumXor_1829.cpp  halveArray_2208.cpp  header.h  intervalIntersection_986.cpp  isNStraightHand_846.cpp  kthGrammar_779.cpp  largestTriangleArea_812.cpp  longestNiceSubstring_1763.cpp  (+39 more)
Clion/ZeroTrac/1600_1800/: ATM_2241.cpp  FrontMiddleBackQueue_1670.cpp  advantageCount_870.cpp  alertNames_1604.cpp  bestCoordinate_1620.cpp  canConvertString_1540.cpp  carFleet_853.cpp  checkMove_1958.cpp  closedIsland_1254.cpp  concatenatedBinary_1680.cpp  constrainedSubsetSum_1425.cpp  countGoodNumbers_1922.cpp  countHousePlacements_2320.cpp  countLatticePoints_2249.cpp  countPairs_2316.cpp  countSquares_1277.cpp  countVowels_2063.cpp  createBinaryTree_2196.cpp  data.h  distanceK_863.cpp  equationsPossible_990.cpp  escapeGhosts_789.cpp  expressiveWords_809.cpp  findBestValue_1300.cpp  getFolderNames_1487.cpp  getLastMoment_1503.cpp  getMaximumGold_1219.cpp  hasValidPath_1391.cpp  header.h  invalidTransactions_1169.cpp  isBipartite_785.cpp  isBipartite_916.cpp  isSubPath_1367.cpp  kthLargestValue_1738.cpp  largestCombination_2275.cpp  lcaDeepestLeaves_1123.cpp  longestOnes_1004.cpp  makeConnected_1319.cpp  maxConsecutiveAnswers_2024.cpp  maxDistance_1162.cpp  (+45 more)
Clion/ZeroTrac/1800_1900/: canReach_1871.cpp  getBiggestThree_1878.cpp  longestCycle_2360.cpp  minimumHammingDistance_1722.cpp  nthMagicalNumber_878.cpp  numFactoredBinaryTrees_823.cpp  peopleAwareOfSecret_2327.cpp  reachingPoints_780.cpp  smallestStringWithSwaps_1202.cpp
Clion/ZeroTrac/BinarySearch/: guessNumber_374.cpp  header.h  search_704.cpp
Clion/ZeroTrac/DP/: coinChange_322.cpp
Clion/ZeroTrac/DisjointSet/: equationsPossible_990.cpp  solve_130.cpp  validateBinaryTreeNodes_1361.cpp
Clion/ZeroTrac/Graph/: allPathsSourceTarget_797.cpp  canFinish_207.cpp  cloneGraph_133.cpp  countHighestScoreNodes_2049.cpp  findOrder_210.cpp  isBipartite_785.cpp  numIslands_200.cpp  possibleBipartition_886.cpp
Clion/ZeroTrac/Tree/: binaryTreePaths_257.cpp  bstFromPreorder_1008.cpp  connect_116.cpp  convertBST_538.cpp  countHighestScoreNodes_2049.cpp  delNodes_1110.cpp  diameterOfBinaryTree_543.cpp  findBottomLeftValue_513.cpp  (+30 more)
(+2222 files in other folders)
